--- a/sass/components/_media-kit.scss
+++ b/sass/components/_media-kit.scss
@@ -61,6 +61,7 @@ main#main-content #mini-panel-contact_information table {
 	    background-color: #ecdb99;
 	}
 	th {
+		border: 1px none #C7BC8F;
 		border-top: 1px solid #C7BC8F;
 		border-bottom: 1px solid #C7BC8F;
 		background: transparent;
@@ -86,6 +87,7 @@ main#main-content #mini-panel-contact_information table {
 	    background-color: #e9e4d3;
 	}
 	td {
+		border: 1px none #C7BC8F;
 		border-top: 1px solid #C7BC8F;
 		border-bottom: 1px solid #C7BC8F;
 
